# shallow-vs-deep-alignment

./: .gitignore  CLAUDE.md  README.md  eval_gcg.py  eval_safety.py  eval_utility.py  finetune.py  index.html  individual_behavior_controls.json  judge_safety.py  main.py  pyproject.toml  requirements-llama-gemma.txt  requirements-qwen.txt  requirements.txt  visualize_judge.py
accelerate_configs/: 2gpu_deepspeed_zero2.yaml  2gpu_deepspeed_zero2_ga32.yaml
finetuning_buckets/inference/: chat.py
finetuning_buckets/models/: get_model.py
finetuning_buckets/trainer/: trainer.py
logs/: slurm-128678-prefill-baseline.out  slurm-129151-data-aug.out
logs/gcg/: llama2_chat_gcg_individual.json  llama2_chat_gcg_individual_judge_results.jsonl
logs/prefilling/: gemma_base_no_prefilling.json  gemma_base_no_prefilling_judge_results.jsonl  gemma_base_prefilled_10_harmful_tokens.json  gemma_base_prefilled_10_harmful_tokens_judge_results.jsonl  gemma_base_prefilled_3_harmful_tokens.json  gemma_base_prefilled_3_harmful_tokens_judge_results.jsonl  gemma_base_prefilled_5_harmful_tokens.json  gemma_base_prefilled_5_harmful_tokens_judge_results.jsonl  gemma_base_prefilled_7_harmful_tokens.json  gemma_base_prefilled_7_harmful_tokens_judge_results.jsonl  gemma_base_prefilled_refusal_prefix.json  gemma_base_prefilled_refusal_prefix_judge_results.jsonl  gemma_it_no_prefilling.json  gemma_it_no_prefilling_judge_results.jsonl  gemma_it_prefilled_10_harmful_tokens.json  gemma_it_prefilled_10_harmful_tokens_judge_results.jsonl  gemma_it_prefilled_3_harmful_tokens.json  gemma_it_prefilled_3_harmful_tokens_judge_results.jsonl  gemma_it_prefilled_5_harmful_tokens.json  (+57 more)
paper_src/: arxiv.sty  neurips_2024.bbl  neurips_2024.tex  reference.bib
scripts/: check_version.sh  download_dataset.py  download_models.py
(+112 files in other folders)
