[project]
name = "shallow-vs-deep-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "deepspeed>=0.14.0,<0.16",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "packaging>=26.0",
    "peft<=0.13",
    "protobuf>=7.34.1",
    "rich>=14.3.3",
    "rouge-score>=0.1.2",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "torch>=2.5.0,<2.7",
    "torchvision>=0.20.0,<0.22",
    "tqdm>=4.67.3",
    "transformers==4.40.2",
    "trl==0.8.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
