[project]
name = "shallow-vs-deep-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "deepspeed>=0.14.0,<0.16",
    "httpx[socks]>=0.28.1",
    "isort>=8.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "packaging>=26.0",
    "peft<=0.13",
    "protobuf>=7.34.1",
    "pycln>=2.6.0",
    "pylint>=4.0.5",
    "rich>=14.3.3",
    "rouge-score>=0.1.2",
    "ruff>=0.15.10",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "tenacity>=9.1.4",
    "torch>=2.5.0,<2.7",
    "torchvision>=0.20.0,<0.22",
    "tqdm>=4.67.3",
    "transformers>=4.51.0",
    "trl==0.8.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-locals = 25

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
